--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@solana/web3.js": "^1.95.0",
     "autoprefixer": "10.4.19",
     "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.5",
     "next": "14.2.5",
     "postcss": "8.4.39",
     "react": "18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.3.1",
     "tailwindcss": "3.4.4"
   }
